Remove warnings and make performance improvements